<resources>
    <string name="app_name">Athor\'s Pizza</string>
    <string name="Log_in" />
    <string name="log_btn" />
    <string name="login" />
    <string name="email" />
    <string name="password" />
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="log_in">Log in</string>
    <string name="log_In">Log In</string>
    <string name="Forgot" />
    <string name="forgot">Forgot password?</string>
    <string name="hi_nathalia">Hi Nathalia</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card Number</string>
    <string name="CheesePizza">Cheese Pizza</string>
    <string name="price">$12.99</string>
    <string name="offer">Limited Time Offer!</string>
    <string name="offers">Buy 1 Get 1 Free</string>
    <string name="quantity">Quantity</string>
    <string name="getStart">Get Start</string>
    <string name="Cname">Cardholder Name</string>
    <string name="Edate">Expiry Date</string>
    <string name="Cvv">CVV</string>
    <string name="Tot">Total Amount</string>
    <string name="val">$19.99</string>
    <string name="pay">Pay Now</string>
    <string name="full_name">Full Name</string>
    <string name="name">Nathalia Jones</string>
    <string name="E_mail">Email</string>
    <string name="Mnum">Mobile Number</string>
    <string name="address">Address</string>
    <string name="Logout">Log Out</string>
    <string name="cancel">Cancel Order</string>
    <string name="cheese">Cheese Pizza</string>
    <string name="sausage">Sausage Pizza</string>
    <string name="pizzaa">LICERIA\'S Pizza</string>
</resources>