<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#523B3B"
        android:foreground="@drawable/foreground_design"
        android:foregroundTint="#161515"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/phot1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="211dp"
        android:layout_height="71dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/fjalla_one"
        android:text="@string/log_in"
        android:textColor="#E2DFDF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="293dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/baseline_email_24"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Email"
        android:textColor="#FDFCFC"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="293dp"
        android:layout_height="66dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#E4D9D9"
        android:drawableLeft="@drawable/baseline_key_24"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/Password"
        android:textColor="#FDFCFC"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="207dp"
        android:layout_height="66dp"
        android:layout_marginBottom="212dp"
        android:backgroundTint="@color/logbtn"
        android:text="@string/log_in"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgot"
        android:textColor="#F6F3F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
